src/objects/Contract_Conditions_Of_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Request__c</fullName>
        <label>Contract Review Request</label>
        <referenceTo>Contract_Review__c</referenceTo>
        <relationshipLabel>Conditions Of Approval</relationshipLabel>
        <relationshipName>Conditions_Of_Approval</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Level_of_Condition__c</fullName>
        <label>Level of Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Condition_value__c</fullName>
        <formula>CASE( TEXT(Level_of_Condition__c) , &apos;Area&apos;, 1, &apos;Region&apos;, 2,&apos;Geography&apos;,3,&apos;Group&apos;,4,&apos;Enterprise&apos;,5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level of Condition value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Condition Of Approval</label>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>Conditions Of Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions Of Approval</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>